[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/boss1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/m2d.png" type="Texture" id=2]
[ext_resource path="res://Sprites/wali_dc.png" type="Texture" id=3]
[ext_resource path="res://Audio/boss.mp3" type="AudioStream" id=4]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 36 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="boss1" type="Node2D"]
script = ExtResource( 1 )

[node name="m2d" type="Area2D" parent="."]
position = Vector2( 160, 296 )

[node name="m2d" type="Sprite" parent="m2d"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="m2d"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="void" type="Area2D" parent="."]
position = Vector2( 1120, 296 )

[node name="void" type="Sprite" parent="void"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="void"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="void_hp" type="Label" parent="."]
anchor_right = 1.0
margin_left = 1040.0
margin_right = 1277.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Void HP: 50"
valign = 1

[node name="m2d_hp" type="Label" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_right = 245.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "M2D HP: 3"
valign = 1

[node name="ost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0 )

[node name="fade" type="AnimationPlayer" parent="ColorRect"]
anims/fade = SubResource( 4 )

[connection signal="area_entered" from="m2d" to="." method="_on_m2d_area_entered"]
[connection signal="area_entered" from="void" to="." method="_on_void_area_entered"]
[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="animation_finished" from="ColorRect/fade" to="." method="_on_fade_animation_finished"]
